bk_ida/gobmkida/g2/accumulate_influence
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:662:7: error: use of undeclared identifier 'working_area_initialized_6'
if ( !working_area_initialized_6 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:664:1: error: use of undeclared identifier 'working_area_initialized_6'
working_area_initialized_6 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:665:31: error: use of undeclared identifier 'working_5'
memset( working_5, 0, sizeof( working_5)); 
                              ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:665:9: error: use of undeclared identifier 'working_5'
memset( working_5, 0, sizeof( working_5)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:667:1: error: use of undeclared identifier 'queue_4'
queue_4[0] = pos; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:669:1: error: use of undeclared identifier 'working_5'
working_5[pos] = strength; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:680:7: error: use of undeclared identifier 'queue_4'
pos = queue_4[v9++]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:694:7: error: use of undeclared identifier 'working_5'
v14 = working_5[pos] * inv_attenuation / 4096; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:715:7: error: use of undeclared identifier 'working_5'
v19 = working_5[v16]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:719:1: error: use of undeclared identifier 'queue_4'
queue_4[v20] = v16; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:721:1: error: use of undeclared identifier 'working_5'
working_5[v16] = v19 + v18; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:749:7: error: use of undeclared identifier 'working_5'
v30 = working_5[v22]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:751:1: error: use of undeclared identifier 'queue_4'
queue_4[queue_end++] = v22; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:752:1: error: use of undeclared identifier 'working_5'
working_5[v22] = v30 + v29; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:764:24: error: use of undeclared identifier 'queue_4'
for ( j = 0LL; ; v31 = queue_4[j] ) 
                       ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:766:7: error: use of undeclared identifier 'working_5'
v33 = working_5[v31]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/engine/influence.c:771:1: error: use of undeclared identifier 'working_5'
working_5[v31] = 0; 
^
17 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/accumulate_influence/src/obj/1/influence.o] Error 1
